--- a/altra_economia.html
+++ b/altra_economia.html
@@ -129,18 +129,21 @@
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
             <i class="fa fa-lightbulb-o fa-stack-1x fa-inverse"></i>
           </span> 
-          Altra economia</h1></div><br>
-          <p class="lead"><strong>Sostenere e valorizzare l’economia sociale e solidale.</strong> Anche quest’anno nel Ddl di Stabilità non si presta attenzione a quelle forme e pratiche di economia sociale e solidale fondate sulla conversione ecologica e sociale dei territori e sulla critica all’attuale modello di sviluppo. Nell’economia sociale e solidale si possono classificare esperienze ormai storiche come l’agricoltura biologica, i gruppi di acquisto solidale, le botteghe del commercio equo e solidale, gli orti urbani, le tante realtà della finanza etica, della promozione culturale, del riciclo e del riuso, del turismo responsabile, del recupero e risparmio energetico, della mobilità sostenibile. Ma vanno annoverate anche esperienze più recenti, come le imprese recuperate e gli spazi sociali e culturali che animano nuovi modelli aperti di altra economia, formazione, ricerca, informazione. Per promuovere e valorizzare queste pratiche e forme resilienti di economia sociale e solidale, Sbilanciamoci! propone di investire circa 250 milioni di euro. Tali risorse sono destinate in particolare a istituire tre Fondi specifici (rispettivamente, per il commercio equo e solidale, per l’economia solidale, per la riconversione ecologica delle imprese), a implementare due Piani strategici nazionali (per la piccola distribuzione organizzata e la certificazione partecipata della qualità dei prodotti biologici), a sostenere una rete nazionale di mercati e fiere eco&eque, a implementare una ricognizione delle aree dismesse di proprietà pubblica o di quelle abbandonate dai privati per un’eventuale ri-assegnazione a fini sociali. Inoltre, Sbilanciamoci! richiede un investimento pubblico sugli Open Data capace di imprimere una svolta in direzione della garanzia della trasparenza istituzionale, della promozione dell’innovazione sociale e della partecipazione civica.
+          Altraeconomia</h1></div>
+          <p><b>Sostenere e valorizzare l’economia sociale e solidale</b>. Anche quest’anno nel Ddl di Stabilità non si presta attenzione a quelle forme e pratiche di economia sociale e solidale fondate sulla conversione ecologica e sociale dei territori e sulla critica all’attuale modello di sviluppo. </p>
+<p>Nell’economia sociale e solidale si possono classificare esperienze ormai storiche come l’agricoltura biologica, i gruppi di acquisto solidale, le botteghe del commercio equo e solidale, gli orti urbani, le tante realtà della finanza etica, della promozione culturale, del riciclo e del riuso, del turismo responsabile, del recupero e risparmio energetico, della mobilità sostenibile. Ma vanno annoverate anche esperienze più recenti, come le imprese recuperate e gli spazi sociali e culturali che animano nuovi modelli aperti di altra economia, formazione, ricerca, informazione. Per promuovere e valorizzare queste pratiche e forme resilienti di economia sociale e solidale, Sbilanciamoci! propone di investire circa 250 milioni di euro. </p>
+<p>Tali risorse sono destinate in particolare a istituire tre Fondi specifici (rispettivamente, per il commercio equo e solidale, per l’economia solidale, per la riconversione ecologica delle imprese), a implementare due Piani strategici nazionali (per la piccola distribuzione organizzata e la certificazione partecipata della qualità dei prodotti biologici), a sostenere una rete nazionale di mercati e fiere eco&amp;eque, a implementare una ricognizione delle aree dismesse di proprietà pubblica o di quelle abbandonate dai privati per un’eventuale ri-assegnazione a fini sociali. Inoltre, Sbilanciamoci! richiede un investimento pubblico sugli Open Data capace di imprimere una svolta in direzione della garanzia della trasparenza istituzionale, della promozione dell’innovazione sociale e della partecipazione civica.</p>
 
           </p>
           </div>
- <div id="scaricatab">
-                <!-- <span class="fa-stack">
-                <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                <i class="fa fa-balance-scale fa-stack-1x fa-inverse"></i></span></h1> -->
-                <!-- <a href="#"><img src="./img/scarica_sbilanciamoci.png"></a> -->
-                <a href="/rapporto2016/altra_economia.pdf" style="text-decoration: none" class="scarica">Scarica la sezione del Rapporto su Altra economia</a>
-            </div>   
+<div id="scaricatab">
+                <span class="fa-stack">
+                  <a href="/rapporto2016/altraeconomia.pdf"> <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                <i class="fa fa-download  fa-stack-1x fa-inverse"></i></span></a> 
+             
+                <a href="/rapporto2016/altraeconomia.pdf" style="text-decoration: none" class="scarica">Scarica la sezione del Rapporto su Altraeconomia</a>
+            </div> 
+  
         </div>
 
       </div>    
