--- a/analisi_e_dati.html
+++ b/analisi_e_dati.html
@@ -122,16 +122,16 @@
   <div class="row clearfix">
     <div class="col-md-12 column">
       <div class="jumbotron">
-        <br>
+     
         <div class="page-header">
           <h1>
           <span class="fa-stack fa-4x">
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
-            <i class="fa fa-bar-chart fa-stack-1x fa-inverse"></i>
+            <i class="fa fa-pie-chart fa-stack-1x fa-inverse"></i>
           </span> 
       Analisi e dati
           </h1>
-        </div><br>
+        </div>
           <p class="lead"></p>
           </div>
         </div>
