--- a/ambiente.html
+++ b/ambiente.html
@@ -122,25 +122,29 @@
   <div class="row clearfix">
     <div class="col-md-12 column">
       <div class="jumbotron">
-        <br>
-        <div class="page-header"><h1>
+      
+        <div class="page-header"> <h1 class="ambiente">
           <span class="fa-stack fa-4x ambiente">
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
             <i class="fa fa-leaf fa-stack-1x fa-inverse"></i>
           </span> 
-          Ambiente</h1></div><br>
-          <p class="lead"><strong>Lo sviluppo intelligente è ecologicamente sostenibile.</strong>Sono cinque gli assi in cui si articolano le proposte di Sbilanciamoci! sull’ambiente e la sostenibilità dello sviluppo, con un totale di entrate statali pari a 2,6 miliardi di euro e uscite per poco meno di 2 miliardi. In primo luogo si propone una sensibile riduzione, pari a 1,5 miliardi di euro, degli stanziamenti pubblici per le grandi opere – come Tav e Mose – che sono costosissime e altamente impattanti, e di destinare invece 1 miliardo di euro a investimenti capillari su piccole e medie opere utili per il Paese. In secondo luogo, si chiede di attuare una strategia di adattamento ai cambiamenti energetici e climatici fondata sull’abbattimento delle emissioni di gas climalteranti e l’adozione di scelte energetiche lungimiranti e responsabili. Sbilanciamoci! propone di implementare diverse misure, tra cui una tassazione dei veicoli legata all’emissione di CO2 che colpisca i veicoli più potenti ed ecologicamente inefficienti come i Suv (500 milioni di entrate in più per lo Stato) e un sistema di incentivi rivolto a famiglie e piccole e medie imprese per l’installazione di impianti fotovoltaici (200 milioni di investimento). In terzo luogo occorre attuare, con uno stanziamento di 500 milioni, un piano di adattamento ai cambiamenti climatici e di manutenzione del territorio, puntando sulla prevenzione, il riassetto idrogeologico, il recupero e la riqualificazione di suolo urbanizzato, la delocalizzazione di immobili in zone a rischio. Inoltre, si chiede un aumento dei fondi destinati alla tutela e alla valorizzazione della biodiversità e del paesaggio. Infine, Sbilanciamoci! richiede un deciso intervento per limitare la produzione dei rifiuti urbani, ridurne il conferimento in discarica e aumentare il tasso di raccolta differenziata. A questo fine, si propone una rimodulazione dell’ecotassa sui rifiuti che porterebbe a maggiori entrate per oltre 400 milioni di euro.
-  
+       Ambiente e Sviluppo sostenibile</h1></div>
+          <p><b>Lo sviluppo intelligente è ecologicamente sostenibile</b>. Sono cinque gli assi in cui si articolano le proposte di Sbilanciamoci! sull’ambiente e la sostenibilità dello sviluppo, con un totale di entrate statali pari a 2,6 miliardi di euro e uscite per poco meno di 2 miliardi. In primo luogo si propone una sensibile riduzione, pari a 1,5 miliardi di euro, degli stanziamenti pubblici per le grandi opere – come Tav e Mose – che sono costosissime e altamente impattanti, e di destinare invece 1 miliardo di euro a investimenti capillari su piccole e medie opere utili per il Paese. </p>
+<p>In secondo luogo, si chiede di attuare una strategia di adattamento ai cambiamenti energetici e climatici fondata sull’abbattimento delle emissioni di gas climalteranti e l’adozione di scelte energetiche lungimiranti e responsabili. Sbilanciamoci! propone di implementare diverse misure, tra cui una tassazione dei veicoli legata all’emissione di CO<sub><span style="font-size: small;">2</sub> che colpisca i veicoli più potenti ed ecologicamente inefficienti come i Suv (500 milioni di entrate in più per lo Stato) e un sistema di incentivi rivolto a famiglie e piccole e medie imprese per l’installazione di impianti fotovoltaici (200 milioni di investimento). </p>
+<p>In terzo luogo occorre attuare, con uno stanziamento di 500 milioni, un piano di adattamento ai cambiamenti climatici e di manutenzione del territorio, puntando sulla prevenzione, il riassetto idrogeologico, il recupero e la riqualificazione di suolo urbanizzato, la delocalizzazione di immobili in zone a rischio. Inoltre, si chiede un aumento dei fondi destinati alla tutela e alla valorizzazione della biodiversità e del paesaggio. </p>
+<p>Infine, Sbilanciamoci! richiede un deciso intervento per limitare la produzione dei rifiuti urbani, ridurne il conferimento in discarica e aumentare il tasso di raccolta differenziata. A questo fine, si propone una rimodulazione dell’ecotassa sui rifiuti che porterebbe a maggiori entrate per oltre 400 milioni di euro.</p>
 
 
-          </p>
-          </div> <div id="scaricatab">
-                <!-- <span class="fa-stack">
-                <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                <i class="fa fa-balance-scale fa-stack-1x fa-inverse"></i></span></h1> -->
-                <!-- <a href="#"><img src="./img/scarica_sbilanciamoci.png"></a> -->
-                <a href="/rapporto2016/ambiente.pdf" style="text-decoration: none" class="scarica">Scarica la sezione del Rapporto su Ambiente</a>
-            </div>   
+          </div>
+
+<div id="scaricatab">
+                <span class="fa-stack">
+                  <a href="/rapporto2016/ambiente.pdf"> <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                <i class="fa fa-download  fa-stack-1x fa-inverse"></i></span></a> 
+             
+                <a href="/rapporto2016/ambiente.pdf" style="text-decoration: none" class="scarica">Scarica la sezione del Rapporto su Ambiente e sviluppo sostenibile</a>
+            </div>  
+ 
 
         </div>
 
