--- a/cultura_conoscenza.html
+++ b/cultura_conoscenza.html
@@ -123,24 +123,26 @@
   <div class="row clearfix">
     <div class="col-md-12 column">
       <div class="jumbotron">
-        <br>
+        
         <div class="page-header"><h1>
           <span class="fa-stack fa-4x cultura">
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
             <i class="fa fa-book fa-stack-1x fa-inverse"></i>
           </span> 
-          Cultura e conoscenza</h1></div><br>
-          <p class="lead">Cinque miliardi di euro <strong>per rimettere al centro i saperi e rilanciare la cultura e l’istruzione pubblica.</strong> Sono questi gli obiettivi e il costo complessivo delle proposte di Sbilanciamoci! in materia di politiche culturali, scuola, università e ricerca. Tra le principali misure previste all’interno di questi capitoli: un consistente investimento sull’edilizia scolastica e universitaria per garantire maggiore e migliore disponibilità, sicurezza e agibilità di spazi e strutture per l’insegnamento, l’apprendimento e l’alloggio degli studenti; il forte aumento delle risorse destinate al Fondo per il miglioramento dell’offerta formativa, al Fondo di finanziamento ordinario e al Fondo integrativo statale, al fine di arricchire e potenziare la didattica e di assicurare le condizioni minime di esigibilità del diritto allo studio; l’adozione di un piano straordinario per l’assunzione di 5mila ricercatori universitari a tempo determinato nel 2016; la riforma della tassazione universitaria centrata sull’istituzione di una “no tax area” per chi dichiara meno di 23mila euro di Isee; lo stanziamento di risorse integrative sia per il Fondo unico per lo spettacolo sia per la promozione dell’arte e dell’architettura contemporanee, in modo da incentivare la produzione, la diffusione e l’accesso alle varie forme di espressione artistica e culturale, soprattutto da parte delle giovani generazioni; la definizione e l’implementazione dei Livelli essenziali delle prestazioni culturali affinché tutti possano realmente accedere ai beni e alle attività culturali (prevedendo anche l’istituzione di uno specifico regime di detrazione fiscale), l’offerta culturale sia potenziata in particolare là dove è più carente e gli operatori culturali siano messi in grado di svolgere al meglio il loro lavoro.
+          Cultura e conoscenza</h1></div>
+        <p>Cinque miliardi di euro per <b>rimettere al centro i saperi e rilanciare la cultura e l’istruzione pubblica</b>. Sono questi gli obiettivi e il costo complessivo delle proposte di Sbilanciamoci! in materia di politiche culturali, scuola, università e ricerca. </p>
+<p>Tra le principali misure previste all’interno di questi capitoli: un consistente investimento sull’edilizia scolastica e universitaria per garantire maggiore e migliore disponibilità, sicurezza e agibilità di spazi e strutture per l’insegnamento, l’apprendimento e l’alloggio degli studenti; il forte aumento delle risorse destinate al Fondo per il miglioramento dell’offerta formativa, al Fondo di finanziamento ordinario e al Fondo integrativo statale, al fine di arricchire e potenziare la didattica e di assicurare le condizioni minime di esigibilità del diritto allo studio; l’adozione di un piano straordinario per l’assunzione di 5mila ricercatori universitari a tempo determinato nel 2016. </p>
+<p>Inoltre, Sbilanciamoci! propone una riforma della tassazione universitaria centrata sull’istituzione di una “no tax area” per chi dichiara meno di 23mila euro di Isee e lo stanziamento di risorse integrative sia per il Fondo unico per lo spettacolo sia per la promozione dell’arte e dell’architettura contemporanee, in modo da incentivare la produzione, la diffusione e l’accesso alle varie forme di espressione artistica e culturale, soprattutto da parte delle giovani generazioni.</p>
+<p>Infine, si chiede la definizione e l’implementazione dei Livelli essenziali delle prestazioni culturali affinché tutti possano realmente accedere ai beni e alle attività culturali (prevedendo anche l’istituzione di uno specifico regime di detrazione fiscale), l’offerta culturale sia potenziata in particolare là dove è più carente e gli operatori culturali siano messi in grado di svolgere al meglio il loro lavoro.</p>
 
-          </p>
           </div>
- <div id="scaricatab">
-                <!-- <span class="fa-stack">
-                <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                <i class="fa fa-balance-scale fa-stack-1x fa-inverse"></i></span></h1> -->
-                <!-- <a href="#"><img src="./img/scarica_sbilanciamoci.png"></a> -->
-                <a href="/rapporto2016/cultura_conoscenza.pdf" style="text-decoration: none" class="scarica">Scarica la sezione del Rapporto su Cultura e conoscenza</a>
-            </div>         
+   <div id="scaricatab">
+                <span class="fa-stack">
+                  <a href="/rapporto2016/culturaeconoscenza.pdf"> <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                <i class="fa fa-download  fa-stack-1x fa-inverse"></i></span></a> 
+             
+                <a href="/rapporto2016/culturaeconoscenza.pdf" style="text-decoration: none" class="scarica">Scarica la sezione del Rapporto su Cultura e conoscenza</a>
+            </div>   
 </div>
 
       </div>    
