--- a/pace_disarmo_cooperazione.html
+++ b/pace_disarmo_cooperazione.html
@@ -124,26 +124,24 @@
   <div class="row clearfix">
     <div class="col-md-12 column">
       <div class="jumbotron">
-        <br>
+      
         <div class="page-header"><h1>
           <span class="fa-stack fa-4x cooperazione">
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
             <i class="icon-noun_122924_cc fa-stack-1x fa-inverse"></i>
           </span> 
-          Cooperazione, pace e disarmo</h1></div><br>
-          <p class="lead">
-In una fase storica e geopolitica come quella attuale, l’obiettivo di <strong>ridurre la spesa militare e investire sulle politiche di pace e cooperazione </strong>appare l’unico realmente praticabile per rimuovere in profondità le cause scatenanti dell’odio e della violenza tra i popoli e per contrastare la spirale distruttiva dell’autoritarismo, della corsa agli armamenti e della militarizzazione che si sta affermando all’interno delle nostre società. Sbilanciamoci! propone a tal fine di operare una riduzione delle spese militari, con un risparmio per la finanza pubblica di più di 4,5 miliardi di euro, sulla base di tre grandi misure: la riduzione del livello degli effettivi delle nostre Forze armate a 150mila unità e la contestuale eliminazione dell’istituto dell’ausiliaria, la diminuzione degli investimenti per i Programmi d’armamento attraverso l’azzeramento dei fondi iscritti al ministero per lo Sviluppo economico e messi a disposizione del ministero della Difesa – cosa che comporterebbe la cancellazione dell’acquisto dei cacciabombardieri F-35 e dei sommergibili U-212 –, il ritiro dalle missioni militari all’estero di chiara valenza aggressiva. Una parte delle risorse risparmiate attraverso la riduzione della spesa militare, quasi 500 milioni di euro, potrebbe essere utilizzata per finanziare politiche di pace e cooperazione internazionale e per una difesa civile e nonviolenta, con il potenziamento dell’Agenzia Italiana per la Cooperazione allo Sviluppo, l’adeguamento delle risorse per il Servizio Civile Universale che consenta un ampliamento e un’ulteriore qualificazione degli avvii di volontari, l’implementazione dei Corpi Civili di Pace, la creazione di un Istituto per la Pace e il Disarmo, la riconversione a fini civili dell’industria a produzione militare e di alcune servitù militari situate nelle aree più povere del territorio italiano per dar vita a progetti di sviluppo locale.
-
-
-          </p>
+          Cooperazione, pace e disarmo</h1></div>
+     <p>In una fase storica e geopolitica come quella attuale, l’obiettivo di <b>ridurre la spesa militare e investire sulle politiche di pace e cooperazione</b><i><b> </b></i>appare l’unico realmente praticabile per rimuovere in profondità le cause scatenanti dell’odio e della violenza tra i popoli e per contrastare la spirale distruttiva dell’autoritarismo, della corsa agli armamenti e della militarizzazione che si sta affermando all’interno delle nostre società. </p>
+<p>Sbilanciamoci! propone a tal fine di operare una riduzione delle spese militari, con un risparmio per la finanza pubblica di più di 4,5 miliardi di euro, sulla base di tre grandi misure: la riduzione del livello degli effettivi delle nostre Forze armate a 150mila unità e la contestuale eliminazione dell’istituto dell’ausiliaria, la diminuzione degli investimenti per i Programmi d’armamento attraverso l’azzeramento dei fondi iscritti al ministero per lo Sviluppo economico e messi a disposizione del ministero della Difesa – cosa che comporterebbe la cancellazione dell’acquisto dei cacciabombardieri F-35 e dei sommergibili U-212 –, il ritiro dalle missioni militari all’estero di chiara valenza aggressiva. </p>
+<p>Una parte delle risorse risparmiate attraverso la riduzione della spesa militare, quasi 500 milioni di euro, potrebbe essere utilizzata per finanziare politiche di pace e cooperazione internazionale e per una difesa civile e nonviolenta, con il potenziamento dell’Agenzia Italiana per la Cooperazione allo Sviluppo, l’adeguamento delle risorse per il Servizio Civile Universale che consenta un ampliamento e un’ulteriore qualificazione degli avvii di volontari, l’implementazione dei Corpi Civili di Pace, la creazione di un Istituto per la Pace e il Disarmo, la riconversione a fini civili dell’industria a produzione militare e di alcune servitù militari situate nelle aree più povere del territorio italiano per dar vita a progetti di sviluppo locale.</p>
           </div>
-   <div id="scaricatab">
-                <!-- <span class="fa-stack">
-                <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                <i class="fa fa-balance-scale fa-stack-1x fa-inverse"></i></span></h1> -->
-                <!-- <a href="#"><img src="./img/scarica_sbilanciamoci.png"></a> -->
-                <a href="/rapporto2016/cooperazione_pace_e_disarmo.pdf" style="text-decoration: none" class="scarica">Scarica la sezione del Rapporto su Cooperazione, pace e disarmo</a>
-            </div> 
+  <div id="scaricatab">
+                <span class="fa-stack">
+                  <a href="/rapporto2016/cooperazione.pdf"> <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                <i class="fa fa-download  fa-stack-1x fa-inverse"></i></span></a> 
+             
+                <a href="/rapporto2016/cooperazione.pdf" style="text-decoration: none" class="scarica">Scarica la sezione del Rapporto su Cooperazione, pace e disarmo</a>
+            </div>   
         </div>
 
       </div>    
