--- a/fisco_finanza.html
+++ b/fisco_finanza.html
@@ -3,13 +3,12 @@
 <html lang="it">
 <head>
 	<meta charset="utf-8">
-	<title>Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente > Fisco e finanza</title>
+	<title>Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente">
-  <meta name="author" content="Ondata">
-  <meta property="og:image" content="http://ondata.github.io/sbilanciamoci-manovra2016/images/bgsbil2.jpg" />
+  <meta name="author" content="Ondata.it - Sbilanciamoci.org">
+  <meta property="og:image" content="http://controfinanziaria.sbilanciamoci.org/images/sbilanciamoci_rapporto2016.jpg" />
   <meta property="og:title" content="Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente" />
-
 
   <!--link rel="stylesheet/less" href="less/bootstrap.less" type="text/css" /-->
   <!--link rel="stylesheet/less" href="less/responsive.less" type="text/css" /-->
