--- a/welfare.html
+++ b/welfare.html
@@ -3,11 +3,11 @@
 <html lang="it">
 <head>
 	<meta charset="utf-8">
-	<title>Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente > Welfare e diritti</title>
+	<title>Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente">
-  <meta name="author" content="Ondata">
-  <meta property="og:image" content="http://ondata.github.io/sbilanciamoci-manovra2016/images/bgsbil2.jpg" />
+  <meta name="author" content="Ondata.it - Sbilanciamoci.org">
+  <meta property="og:image" content="http://controfinanziaria.sbilanciamoci.org/images/sbilanciamoci_rapporto2016.jpg" />
   <meta property="og:title" content="Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente" />
 
 
