--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente">
   <meta name="author" content="Ondata.it - Sbilanciamoci.org">
-  <meta property="og:image" content="http://controfinanziaria.sbilanciamoci.org/images/sbilanciamoci_rapporto2016.jpg" />
   <meta property="og:title" content="Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente" />
+  <meta property="og:image" content="http://controfinanziaria.sbilanciamoci.org/images/sbilanciamoci_rapporto2016.jpg" />
+<meta property="og:type" content="website" />
+
 
 
   <!--link rel="stylesheet/less" href="less/bootstrap.less" type="text/css" /-->
